--- a/src/pages/device/device_list/index.less
+++ b/src/pages/device/device_list/index.less
@@ -1,6 +1,18 @@
 .devicelist {
-    padding: 24;
-     background: #fff;
-     width: 100%;
-     height: 100% 
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    padding: 24px 0px 0px 0px;
+    .devicetable {
+        padding: 0px 0px 0px 0px;
+    }
+    .button{
+        transform:translateX(30%);
+    }
+    .search {
+        width: 230px;
+        float: right;
+        padding: 0px 64px 0px 0px;
+    }
 }
+
