--- a/src/pages/device/device_model/index.less
+++ b/src/pages/device/device_model/index.less
@@ -1,8 +1,8 @@
 .devicemodel {
-    padding: 24;
-     background: #fff;
-     width: 100%;
-     height:60%
+    padding: 24px;
+    background: #fff;
+    width: 100%;
+    height:60%
 }
 
 .button {
