--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -42,11 +42,19 @@
 .header {
   background: #fff;
   text-align: right;
-  padding: 20
+  padding: 20px
 }
 
 .children {
-  padding: 24;
+  padding: 24px;
   width: 100%;
   height: 100%
+}
+
+.content {
+  margin: 0 16px 
+}
+
+.breadcrumb {
+  margin: 16px 0
 }
