--- a/src/pages/device/device_binding/index.less
+++ b/src/pages/device/device_binding/index.less
@@ -1,6 +1,17 @@
 .binding {
-    padding: 24;
+    padding: 24px 24px 24px 24px;
     background: #fff;
     width:100%;
-    height:100%
+    height:100%;
+
 }
+
+.createtable {
+    margin-left: 0px;
+}
+
+.button {
+    padding-left: 24px;
+}
+
+
